--- a/package.json
+++ b/package.json
@@ -43,20 +43,18 @@
     "muaz-khan"
   ],
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jquery": "^3.3.1",
     "log4js": "^2.9.0",
+    "node-ensure": "0.0.0",
     "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
-    "passport-google-oauth": "^1.0.0",
-    "passport-kakao": "0.0.5",
-    "passport-local": "^1.0.0",
-    "passport-naver": "^1.0.6",
-    "pg": "^7.4.3",
     "request": "^2.87.0",
+    "rtcpeerconnection-shim": "^1.2.13",
+    "sdp": "^2.7.4",
     "socket.io": "^2.1.1"
   },
   "analyze": false,
@@ -68,16 +66,5 @@
   },
   "homepage": "https://rtcmulticonnection.herokuapp.com/",
   "_from": "rtcmulticonnection-v3@",
-  "devDependencies": {
-    "grunt": "0.4.5",
-    "grunt-bump": "0.7.0",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-copy": "0.8.2",
-    "grunt-contrib-uglify": "0.11.0",
-    "grunt-jsbeautifier": "0.2.10",
-    "grunt-replace": "0.11.0",
-    "load-grunt-tasks": "3.4.0"
-  }
+  "devDependencies": {}
 }
