--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "rtcmulticonnection-v3",
+  "name": "HamoniaMediaWeaver",
   "preferGlobal": false,
-  "version": "3.4.4",
+  "version": "1.0.0",
   "author": {
-    "name": "Muaz Khan",
-    "email": "muazkh@gmail.com",
-    "url": "http://www.muazkhan.com/"
+    "name": "INVESUME",
+    "email": "servicedesk@invesume.com",
+    "url": "https://hamonia.kr"
   },
-  "description": "RTCMultiConnection is a WebRTC JavaScript wrapper library runs top over RTCPeerConnection API to support all possible peer-to-peer features.",
+  "description": "HamoniaMediaWeaver",
   "repository": {
     "type": "git",
-    "url": "https://github.com/muaz-khan/RTCMultiConnection.git"
+    "url": "https://github.com/ivsteam/HamoniaMediaWeaver"
   },
   "scripts": {
     "start": "node server.js"
@@ -20,6 +20,7 @@
   },
   "main": "./dist/RTCMultiConnection.js",
   "keywords": [
+    "HamoniaMediaWeaver",
     "peer-to-peer",
     "peer2peer",
     "peer",
@@ -30,9 +31,6 @@
     "javascript",
     "chrome",
     "firefox",
-    "opera",
-    "ie",
-    "internet-explorer",
     "android",
     "rtcweb",
     "rtcmulticonnection.js",
@@ -58,13 +56,12 @@
     "socket.io": "^2.1.1"
   },
   "analyze": false,
-  "license": "MIT",
+  "license": "Apache License 2.0",
   "readmeFilename": "README.md",
   "bugs": {
-    "url": "https://github.com/muaz-khan/RTCMultiConnection/issues",
-    "email": "muazkh@gmail.com"
+    "url": "https://github.com/ivsteam/HamoniaMediaWeaver/issues",
+    "email": "servicedesk@invesume.com"
   },
-  "homepage": "https://rtcmulticonnection.herokuapp.com/",
-  "_from": "rtcmulticonnection-v3@",
+  "homepage": "https://hamonia.kr",
   "devDependencies": {}
 }
