Update Application, signaling 서버 에러 처리
- Error 발생 시 지정된 gmail로 발송(설정 필요)
- Application, signaling server global error handling

--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jquery": "^3.3.1",
-    "log4js": "^2.9.0",
+    "log4js": "^2.10.0",
+    "moment": "^2.22.2",
     "node-ensure": "0.0.0",
+    "nodemailer": "^4.6.8",
+    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
     "request": "^2.87.0",
     "rtcpeerconnection-shim": "^1.2.13",
